# artifacts/api-server/src/routes/index.ts
@@ -4,7 +4,7 @@ import bookingsRouter from "./bookings";
 import podcastsRouter from "./podcasts";
 import coursesRouter from "./courses";
 import uploadRouter from "./upload";
-
+import settingsRouter from "./settings";
 const router: IRouter = Router();
 
 router.use(healthRouter);
@@ -12,5 +12,6 @@ router.use(bookingsRouter);
 router.use(podcastsRouter);
 router.use(coursesRouter);
 router.use(uploadRouter);
+router.use(settingsRouter);
 
 export default router;
